--- a/portfolio.html
+++ b/portfolio.html
@@ -20,27 +20,29 @@
             <nav class="nav-flex">
                 <a href="./index.html" lang=en class="logo-dark"><span class="accent-logo">Web</span>Studio</a>
                 <ul class="navigation-links list">
-                    <li class="nav-item"><a class="link" href="./index.html">Студия</a></li>
-                    <li class="nav-item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
+                    <li class="nav-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                     <li class="nav-item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
-        <ul class="adress-links list">
-            <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">
-                    <svg class="adress-link-icon" width="16px" height="12px">
-                        <use href="./images/sprite.svg#icon-envelope"></use>
-                    </svg>info@devstudio.com
-                </a>
-            </li>
-            <li class="item">
-                <a class="link" href="tel:+380961111111">
-                    <svg class="adress-link-icon" width="20px" height="16px">
-                        <use href="./images/sprite.svg#icon-smartphone"></use>
-                    </svg>+38 096 111 11 11
-                </a>
-            </li>
-        </ul>
+            <ul class="adress-links list">
+                <li class="item">
+                    <a class="link" href="mailto:info@devstudio.com">
+    
+                        <svg class="adress-link-icon" width="16px" height="12px">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+    
+                    </a>
+                </li>
+                <li class="item">
+                    <a class="link" href="tel:+380961111111">
+                        <svg class="adress-link-icon" width="20px" height="16px">
+                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
 <!-- main -->
@@ -194,4 +196,5 @@
             </div>
         </div>
     </footer>
+
 </body>
