--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             <nav class="nav-flex">
                 <a href="./index.html" lang=en class="logo-dark"><span class="accent-logo">Web</span>Studio</a>
                 <ul class="navigation-links list">
-                    <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
-                    <li class="nav-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="link" href="./index.html">Студия</a></li>
+                    <li class="nav-item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="nav-item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
@@ -67,7 +67,14 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img1.jpg" alt="пример веб-страницы" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div></div>
             <h2 class="portfolio-text-main">Технокряк</h2>
             <p class="portfolio-text-secondary">Веб-сайт</p>
             </div></a>
@@ -75,7 +82,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img2.jpg" alt="постер игра в баскетбол" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p class="portfolio-text-secondary">Дизайн</p>
             </div></a>
@@ -83,7 +98,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img3.jpg" alt="эмблема ресторана" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Ресторан <span lang="en">Seafood</span></h2>
             <p class="portfolio-text-secondary">Приложение</p>
             </div></a>
@@ -91,7 +114,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img4.jpg" alt="наушники" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Проект <span lang="en">Prime</span></h2>
             <p class="portfolio-text-secondary">Маркетинг</p>
             </div></a>
@@ -99,7 +130,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img5.jpg" alt="пример приложения" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Проект <span lang="en">Boxes</span></h2>
             <p class="portfolio-text-secondary">Приложение</p>
             </div></a>
@@ -107,7 +146,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img6.jpg" alt="пример веб-сайта" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main" lang="en">Inspiration has no Borders</h2>
             <p class="portfolio-text-secondary">Веб-сайт</p>
             </div></a>
@@ -115,7 +162,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img7.jpg" alt="дизайн в книге" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Издание <span lang="en">Limited Edition</span></h2>
             <p class="portfolio-text-secondary">Дизайн</p>
             </div></a>
@@ -123,7 +178,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img8.jpg" alt="этикетка с названием проекта" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main">Проект <span lang="en">LAB</span></h2>
             <p class="portfolio-text-secondary">Маркетинг</p>
             </div></a>
@@ -131,7 +194,15 @@
         <li class="portfolio-card">
             <a class="portfolio-card-link" href="">
                 <div>
+                <div class="container-portfolio">
             <img src="./images/portfolio/img9.jpg" alt="приложение на экране ноутбука" width=370>
+            <div class="overlay-portfolio">
+                <p class="overlay-portfolio-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+            </div>
+            </div>
             <h2 class="portfolio-text-main" lang="en">Growing Business</h2>
             <p class="portfolio-text-secondary">Приложение</p>
             </div></a>
