--- a/index.html
+++ b/index.html
@@ -93,15 +93,18 @@
             <ul class="projects-list list">
                 <li class="projects-cards">
                   <img src="./images/projects/img1.jpg" alt="написание кода с использованием планшета" width="370">
-                  <p class="project-cards-text">Десктопные приложения</p>
+                  <div class="project-cards-text-container">
+                      <p class="project-cards-text">Десктопные приложения</p></div>
                 </li>
                 <li class="projects-cards">
                   <img src="./images/projects/img2.jpg" alt="верстка для мобильных устройств" width="370">
-                  <p class="project-cards-text">Мобильные приложения</p>
+                <div class="project-cards-text-container">
+                  <p class="project-cards-text">Мобильные приложения</p></div>
                 </li>
                 <li class="projects-cards">
                   <img src="./images/projects/img3.jpg" alt="выбор цвета из палитры на планшете" width="370">
-                  <p class="project-cards-text">Дизайнерские решения</p>
+                <div class="project-cards-text-container">
+                  <p class="project-cards-text">Дизайнерские решения</p></div>
                 </li>
             </ul>
             </div>
